<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StepAside</string>
    
    <string name="rsu">RSU Mode</string>
    <string name="obu_ambulance">OBU Ambulance Mode</string>
    <string name="obu">OBU Normal Mode</string>
    <string name="registry_button_ambulance">Registry Service</string>
    <string name="message_id_title">Message ID</string>
    <string name="gps_location_title">GPS Location</string>
    <string name="edit_message">ID</string>
    <string name="log_obu">Log from received messages:</string>
    <string name="start">start</string>
    
</resources>
