<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Switch
        android:id="@+id/start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="number"
        android:text="1" >

        <requestFocus />
    </EditText>


    <TextView
        android:id="@+id/messageIdTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_id_title" >
    </TextView>
    
    <TextView
        android:id="@+id/messageId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    
    
    <TextView
        android:id="@+id/gpsLocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_location_title" >
    </TextView>
    
    
    <TextView
        android:id="@+id/gpsLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

</LinearLayout>